headless: support ssl-key-log-file flag

Headless users may want to decode captured traffic.

Bug: 767532
Change-Id: Ied7fa3ec4fb771f845d9c38eb2a476f2e5a3b018